# kickstart-templates

./: README.md
cc-sample/: template.toml
cc-sample/.hooks/: post_gen_hook
cc-sample/{{ project_name }}/source/: CMakeLists.txt  main.cc
qt-sample/: template.toml
qt-sample/.hooks/: post_gen_hook
qt-sample/.kickstart/hooks/: pre_gen_hook
qt-sample/{{ project_name }}/: README.md
qt-sample/{{ project_name }}/source/: CMakeLists.txt  CMakePresets.json  Dockerfile  main.cc  sample.cc  vcpkg.json  {{ project_name $$ snake_case }}.cc
qt-sample/{{ project_name }}/source/include/: sample.hh  {{ project_name $$ snake_case }}.hh
qt-timer-sample/: template.toml
qt-timer-sample/.kicks/hooks/: post_gen_hook
qt-timer-sample/{{ project_name }}/source/: CMakeLists.txt  main.cc  vcpkg.json  {{ file_name }}.cc
qt-timer-sample/{{ project_name }}/source/include/: {{ file_name }}.hh
